--- a/resources/sass/usersview.scss
+++ b/resources/sass/usersview.scss
@@ -7,9 +7,9 @@
 .contents-outer {
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgb(0 0 0 / 30%);
-  margin: 120px 0 60px 0;
+  margin: 120px 5% 60px 5%;
   min-height: 750px;
-  min-width: 1300px;
+  max-width: 1300px;
 
   .contents-title {
     text-align: center;
@@ -77,100 +77,100 @@
       display: none;
     }
 
-    .users-contents-outer {
-      padding: 30px 30px;
-      max-width: 1200px;
-
-      .users-contents-wrapper {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-
-        .users-item-wrapper:hover {
-          transform: scale(1.03);
-          // background-color: rgba(213, 218, 229, 0.6);
-          // transition: 1.0s;
-        }
-
-        .users-item-wrapper {
-          border: solid 2px rgba(204, 204, 204, 0.9);
-          border-radius: 10px;
-          box-shadow: 0 8px 10px 0 rgba(0, 0, 0, .3);
-          width: 300px;
-          margin: 30px 40px;
-          padding-bottom: 10px;
-
-          .anker-area {
-            text-decoration: none;
-            color: #24140e;
-          }
-
-          .user-image-area {
-            display: flex;
-            justify-content: center;
-            margin: 20px 0;
-
-            img {
-              width: 180px;
-              height: 180px;
-              border-radius: 50%;
-            }
-          }
-
-          .user-name-area {
-            text-align: center;
-
-            p {
-              font-size: 25px;
-              font-weight: 700;
-              margin: 0;
-            }
-          }
-
-          .user-comment-area {
-            text-align: center;
-            padding: 0 20px 10px 20px;
-
-            p {
-              font-size: 15px;
-              margin: 0;
-            }
-          }
-
-          .follow-button-area {
-            width: 100%;
-            padding: 0px 35px;
-            margin-bottom: 10px;
-
-            .following-btn {
-              background-color: #FFF;
-              color: #6c757d;
-              font-weight: 600;
-              border: solid 2px #6c757d;
-            }
-
-            button {
-              width: 100%;
-            }
-          }
-
-          .icon-area {
-            text-align: center;
-
-            .bi-star-fill {
-              color: #ffd700;
-            }
-
-            .bi-file-earmark-post-fill {
-              color: #436be0;
-            }
-
-            .icon {
-              margin:0 10px;
-            }
-          }
-        }
-      }
-    }
+    // .users-contents-outer {
+    //   padding: 30px 30px;
+    //   max-width: 1200px;
+    //
+    //   .users-contents-wrapper {
+    //     display: flex;
+    //     flex-direction: row;
+    //     flex-wrap: wrap;
+    //
+    //     .users-item-wrapper:hover {
+    //       transform: scale(1.03);
+    //       // background-color: rgba(213, 218, 229, 0.6);
+    //       // transition: 1.0s;
+    //     }
+    //
+    //     .users-item-wrapper {
+    //       border: solid 2px rgba(204, 204, 204, 0.9);
+    //       border-radius: 10px;
+    //       box-shadow: 0 8px 10px 0 rgba(0, 0, 0, .3);
+    //       width: 300px;
+    //       margin: 30px 40px;
+    //       padding-bottom: 10px;
+    //
+    //       .anker-area {
+    //         text-decoration: none;
+    //         color: #24140e;
+    //       }
+    //
+    //       .user-image-area {
+    //         display: flex;
+    //         justify-content: center;
+    //         margin: 20px 0;
+    //
+    //         img {
+    //           width: 180px;
+    //           height: 180px;
+    //           border-radius: 50%;
+    //         }
+    //       }
+    //
+    //       .user-name-area {
+    //         text-align: center;
+    //
+    //         p {
+    //           font-size: 25px;
+    //           font-weight: 700;
+    //           margin: 0;
+    //         }
+    //       }
+    //
+    //       .user-comment-area {
+    //         text-align: center;
+    //         padding: 0 20px 10px 20px;
+    //
+    //         p {
+    //           font-size: 15px;
+    //           margin: 0;
+    //         }
+    //       }
+    //
+    //       .follow-button-area {
+    //         width: 100%;
+    //         padding: 0px 35px;
+    //         margin-bottom: 10px;
+    //
+    //         .following-btn {
+    //           background-color: #FFF;
+    //           color: #6c757d;
+    //           font-weight: 600;
+    //           border: solid 2px #6c757d;
+    //         }
+    //
+    //         button {
+    //           width: 100%;
+    //         }
+    //       }
+    //
+    //       .icon-area {
+    //         text-align: center;
+    //
+    //         .bi-star-fill {
+    //           color: #ffd700;
+    //         }
+    //
+    //         .bi-file-earmark-post-fill {
+    //           color: #436be0;
+    //         }
+    //
+    //         .icon {
+    //           margin:0 10px;
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
   }
 }
