--- a/public/css/formpage.css
+++ b/public/css/formpage.css
@@ -6,8 +6,8 @@
 .form-outer {
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
-  margin: 120px 0 60px 0;
-  min-height: 870px;
-  min-width: 1300px;
+  margin-top: 130px;
+  margin-bottom: 80px;
+  padding: 0px 100px;
 }
 
