--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,7 @@
+.contents {
+  min-width: 1150px;
+}
+
 .wrapper {
   margin: 150px 50px 100px 50px;
 }
@@ -87,6 +91,14 @@ h2 {
   justify-content: space-between;
 }
 
+#popular-area-wrapper #popular-area-list form {
+  padding: 3em;
+}
+
+#popular-area-wrapper #popular-area-list input {
+  display: none;
+}
+
 #popular-area-wrapper #popular-area-list .popular-area-image {
   height: 100%;
   width: 100%;
@@ -94,10 +106,6 @@ h2 {
 }
 
 #popular-area-wrapper #popular-area-list a {
-  font-size: 30px;
-  margin: 15px 35px;
-  height: 100%;
-  width: 100%;
   text-decoration: none;
   color: black;
 }
@@ -122,7 +130,7 @@ h2 {
 
 .spot-component-outer {
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 #spot-wrapper .spot-item-wrapper {
@@ -130,5 +138,6 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin-bottom: 0px;
 }
 
