--- a/public/css/planpage.css
+++ b/public/css/planpage.css
@@ -117,7 +117,6 @@
   width: calc(100vw - 250px);
   min-height: calc(100vh - 60px);
   height: 100%;
-  min-width: 1100px;
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.15);
   display: flex;
@@ -161,7 +160,8 @@
 }
 
 .plan-outline-wrapper {
-  width: 1100px;
+  width: 100%;
+  padding: 0 70px;
 }
 
 .plan-outline-wrapper .post-user-wrapper {
@@ -192,7 +192,7 @@
   width: 100%;
   height: 400px;
   display: flex;
-  justify-content: space-right;
+  justify-content: center;
 }
 
 .plan-outline-wrapper .plan-images-wrapper .outline-images {
@@ -219,14 +219,14 @@
 
 .plan-outline-wrapper .plan-images-wrapper .sub-image-wrapper .sub-image {
   height: 50%;
-  width: 320px;
+  width: 50%;
   border-radius: 10px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .plan-outline-wrapper .plan-taginfo-area {
-  padding-top: 60px;
+  padding: 60px 0;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -277,13 +277,14 @@
 
 .spot-wrapper {
   height: 100%;
+  padding: 0 50px;
 }
 
 .spot-wrapper .spot-image-outline-wrapper {
   height: 100%;
   margin: 40px 0 0 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .spot-wrapper .spot-image-outline-wrapper .spot-image-wrapper {
@@ -320,10 +321,6 @@
   border-radius: 10px;
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.spot-wrapper .spot-image-outline-wrapper .spot-outline-wrapper {
-  width: 60%;
 }
 
 .spot-wrapper .spot-image-outline-wrapper .spot-outline-wrapper h3 {
@@ -384,12 +381,7 @@
 }
 
 .spot-wrapper .spot-infocomment-wrapper .spot-info-wrapper {
-  width: 43%;
   white-space: pre-wrap;
-}
-
-.spot-wrapper .spot-infocomment-wrapper .spot-comment-wrapper {
-  width: 48%;
 }
 
 .spot-wrapper .spot-infocomment-wrapper .spot-comment-wrapper .comment-item {
