--- a/public/css/spotview.css
+++ b/public/css/spotview.css
@@ -6,7 +6,8 @@
 }
 
 .spot-page-body .spot-page-outer {
-  width: 70%;
+  width: 90%;
+  max-width: 1300px;
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.15);
 }
