--- a/resources/sass/formpage.scss
+++ b/resources/sass/formpage.scss
@@ -7,7 +7,7 @@
 .form-outer {
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgb(0 0 0 / 30%);
-  margin: 120px 0 60px 0;
-  min-height: 870px;
-  min-width: 1300px;
+  margin-top: 130px;
+  margin-bottom: 80px;
+  padding: 0px 100px;
 }
