--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -1,4 +1,8 @@
 
+.contents {
+  min-width: 1150px;
+}
+
 .wrapper {
   margin: 150px 50px 100px 50px;
 }
@@ -93,6 +97,14 @@ h2 {
     display: flex;
     justify-content: space-between;
 
+    form {
+      padding: 3em;
+    }
+
+    input {
+      display: none;
+    }
+
     .popular-area-image {
       height: 100%;
       width: 100%;
@@ -100,10 +112,6 @@ h2 {
     }
 
     a {
-      font-size: 30px;
-      margin: 15px 35px;
-      height: 100%;
-      width: 100%;
       text-decoration: none;
       color: black;
     }
@@ -137,7 +145,7 @@ h2 {
 
 .spot-component-outer {
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 #spot-wrapper .spot-item-wrapper {
@@ -145,4 +153,5 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-bottom: 0px;
   }
