--- a/resources/sass/mypage.scss
+++ b/resources/sass/mypage.scss
@@ -1,29 +1,28 @@
 .mypage {
-  display: grid;
-  place-items: center;
+  padding: 150px 10% 90px 10%;
 }
 
 .contents-outer {
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgb(0 0 0 / 30%);
-  margin: 120px 0 60px 0;
   min-height: 920px;
-  min-width: 1300px;
+  // max-width: 1200px;
 
   .contents-title {
     text-align: center;
-    margin-top: 30px;
+    padding-top: 30px;
   }
 
   .contents-wrapper {
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     height: 85%;
     margin-top: 50px;
 
     .contents-profile {
       margin-top: 40px;
-      width: 30%;
+      // width: 30%;
+      // min-width: 370px;
 
       .profile-area-outer {
         border: solid 1px rgba(204, 204, 204, 0.8);
@@ -99,8 +98,8 @@
 
     .contents-post {
       height: 100%;
-      width: 55%;
-      padding-left: 30px;
+      // width: 55%;
+      // padding-left: 30px;
 
       /* ulのデフォルトスタイルを消去 */
       .tabs-menu {
@@ -161,4 +160,45 @@
       }
     }
   }
+}
+
+@media (min-width: 1201px) {
+    .contents-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+
+    .contents-profile {
+      width: 30%;
+      min-width: 370px;
+    }
+
+    .contents-post {
+      width: 55%;
+      padding-left: 30px;
+    }
+}
+
+@media (max-width: 1200px) {
+  .contents-outer{
+    min-width: 760px;
+  }
+    .contents-wrapper {
+      display: block;
+    }
+
+    .contents-profile {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .profile-area-outer {
+      width: 400px;
+    }
+
+    .contents-post {
+      width: 100%;
+      padding: 10%;
+    }
 }
