--- a/resources/sass/planpage.scss
+++ b/resources/sass/planpage.scss
@@ -120,7 +120,7 @@
     width: calc(100vw - 250px);
     min-height: calc(100vh - 60px);
     height: 100%;
-    min-width: 1100px;
+    // min-width: 1100px;
     background-color: #fff;
     box-shadow: 0 0 8px 0 rgb(0 0 0 / 15%);
     // display: grid;
@@ -171,7 +171,8 @@
 // ---------------プランアウトライン関連------------------
 
 .plan-outline-wrapper {
-  width: 1100px;
+  width: 100%;
+  padding: 0 70px;
 
   .post-user-wrapper {
     text-align: right;
@@ -201,7 +202,7 @@
     width: 100%;
     height: 400px;
     display: flex;
-    justify-content: space-right;
+    justify-content: center;
 
     .outline-images {
       padding: 2px 2px 0 0;
@@ -225,7 +226,7 @@
 
       .sub-image {
         height: 50%;
-        width: 320px;
+        width: 50%;
         border-radius: 10px;
         object-fit: cover;
       }
@@ -233,7 +234,7 @@
   }
 
   .plan-taginfo-area {
-    padding-top: 60px;
+    padding: 60px 0;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -288,13 +289,14 @@
 
 .spot-wrapper {
   height: 100%;
+  padding: 0 50px;
 
   .spot-image-outline-wrapper {
     height: 100%;
 
     margin: 40px 0 0 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 
     .spot-image-wrapper {
       height: 300px;
@@ -331,7 +333,6 @@
     }
 
     .spot-outline-wrapper {
-      width: 60%;
 
       h3 {
         font-weight: 700;
@@ -393,11 +394,9 @@
     }
 
     .spot-info-wrapper {
-      width: 43%;
       white-space: pre-wrap;
     }
     .spot-comment-wrapper {
-      width: 48%;
 
       .comment-item {
         display: flex;
@@ -483,3 +482,19 @@
   margin: 0;
   padding: 0;
 }
+
+
+
+
+// @media (min-width: 1251px) {
+//   .spot-image-outline-wrapper {
+//     display: flex;
+//     justify-content: center;
+//   }
+// }
+//
+// @media (max-width: 1250px) {
+//   .spot-image-outline-wrapper {
+//     display: block;
+//   }
+// }
