--- a/resources/sass/spotview.scss
+++ b/resources/sass/spotview.scss
@@ -1,3 +1,4 @@
+
 .spot-page-body {
   padding-top: 120px;
   padding-bottom: 80px;
@@ -5,7 +6,8 @@
   justify-content: center;
 
   .spot-page-outer {
-    width: 70%;
+    width: 90%;
+    max-width: 1300px;
     background-color: #fff;
     box-shadow: 0 0 8px 0 rgb(0 0 0 / 15%);
 
