--- a/public/css/comment.css
+++ b/public/css/comment.css
@@ -13,6 +13,7 @@
 
 .comment-outer .comment-wrapper .comment-contents-outer {
   margin-top: 80px;
+  margin-bottom: 50px;
 }
 
 .comment-outer .comment-wrapper .comment-contents-outer p {
